amaroK ChangeLog
================
(C) 2002-2005 the amaroK authors.


VERSION 1.2.1:
  ADD: .ram playlist support with code from Kaffeine (BR 96101)
  FIX: amaroK can now determine the correct track-length even for formats
       unknown to TagLib. Makes it possible to seek e.g. in m4a tracks.
  ADD: Can now pick from multiple Musicbrainz results. Patch from
       Jonathan Halcrow <gte899j@prism.gatech.edu>. (BR 89701)
  ADD: May now set a custom cover on multiple albums in the Cover-Manager.
  ADD: Support relative path of tracks in writing playlists. (BR 91053)
  FIX: Don't inline-edit tags for the whole playlist's selection.
  FIX: Fix "Recode Tags" crash issues. (BR 95041)
  ADD: "Set Custom Cover" can fetch remote images. (BR 90499)

VERSION 1.2:
  ADD: "Repeat Track" status is reflected by an icon in the playlist.
  ADD: New icons from tightcode for statusbar and repeatTrack.
  ADD: New Smart-Playlist "Ever Played".
  CHG: Bumped GStreamer version requirement to 0.8.4.
  CHG: Made it possible to use artsdsink with GStreamer again.
  CHG: Don't read m3u files recursively when dropping a folder on the
       playlist. No more doubled entries.
  FIX: Shoutcast radio with GStreamer is improved, no more dropouts when
       starting a stream.
  ADD: The "Similar Artists" feature (using Audioscrobbler) can now be
       switched off. (BR 95280)
  FIX: Error in Shoutcast http-request, which made it impossible to play
       many radio streams with GStreamer and aRts. (BR 97211, 98569)
  CHG: Better default directory for selecting a custom cover.
  FIX: ContextBrowser reloads after setting a custom cover. (BR 96548)
  FIX: Cover-Manager's full-screen view works with Bughira (brushed metal).
  ADD: Script-Manager can auto-run scripts on application startup.
  ADD: aKode engine, depends on KDE 3.4. No configure check yet.
  FIX: Don't add non-audio files to the Collection.
  CHG: We now use the SqlLoader, which greatly improves the performance of